tests/__snapshots__/api-toBeUndefined-stderr.snap.txt
Error: The source type is 'string'.

   7 |   expect(returnsUndefined()).type.toBeUndefined();
   8 | 
   9 |   expect(returnsString()).type.toBeUndefined();
     |                                ~~~~~~~~~~~~~
  10 | });
  11 | 
  12 | test("is NOT undefined?", () => {

       at ./__typetests__/toBeUndefined.tst.ts:9:32 ❭ is undefined?

Error: The source type is 'undefined'.

  13 |   expect(returnsString()).type.not.toBeUndefined();
  14 | 
  15 |   expect(returnsUndefined()).type.not.toBeUndefined();
     |                                       ~~~~~~~~~~~~~
  16 | });
  17 | 

       at ./__typetests__/toBeUndefined.tst.ts:15:39 ❭ is NOT undefined?

